--- a/PROYECTO-MJC memoorize/juegos/quiz/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/quiz/css/style.css
@@ -6,7 +6,153 @@ body{
     background-position: center;
     overflow: hidden;
 }
+.game-container {
+    position: relative;
+    display: inline-block;
+    
+}
+.nombre-icono {
+    display: none; 
+    font-size: 1.0em; 
+    color: #ffffff; 
+    margin-top: 0px; 
+    left: 0px;
+    position: relative;
+    text-align: center; 
+}
 
+.game-description {
+    display: none;
+    position: absolute;
+    top: 85%;
+    left: 20%;
+    width: 200px;
+    background-image: url('../../../menu/img/botonw.png');
+    background-color: rgba(255, 255, 255, 0); 
+    background-size: cover; 
+    background-repeat: no-repeat;
+    background-position: center;
+    color: rgb(0, 0, 0); 
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+    z-index: 10;
+    font-size: 1.3em; 
+    line-height: 1.6em; 
+}
+
+.game-button:hover {
+    transform: scale(1.2);
+    border: none;
+}
+.game-logo:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+}
+.modal-content {
+    border-radius: 10px; 
+    background-image: url(../../../menu/img/scene-ocean-underwater-background_1308-29689.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover; 
+    width: 300px; 
+    height: auto; 
+    min-height: 200px; 
+    overflow: hidden;  
+    color: white; 
+    position: relative; 
+    padding: 20px; 
+}
+.modal-header {
+    background-color: #eaeaea00; 
+    color: white;
+}
+
+.modal-body {
+    font-size: 21px; 
+    text-align: center; 
+}
+.modal-title{
+    color: black;
+}
+.modal-footer .btn-secondary {
+    background-color: #ff4646;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    top: 20px;
+    position: relative;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+.modal-footer .btn-secondary:hover {
+    background-color: #ff5b5b;
+    cursor: pointer;
+}
+/* Estilo de los botones personalizados */
+.btn-custom {
+    width: 250px;
+    height: 250px;
+    border: none;
+    overflow: hidden;
+    transition: transform 0.4s ease;
+    margin: 30px;
+}
+.perfil-usuario {
+    margin-top: 20px;
+}
+
+.foto-perfil {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 15px;
+}
+.offcanvas {
+    width: 300px;
+    height: 100%;
+    background-image: url(../../../menu/img/scene-ocean-underwater-background_1308-29689.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;  
+    color: rgba(255, 255, 255, 0); 
+    position: relative; 
+}
+
+.offcanvas::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0); 
+    z-index: 0; 
+}
+
+.offcanvas .perfil-usuario {
+    position: relative; 
+    z-index: 1; 
+}
+
+.offcanvas-backdrop {
+    background-color: transparent !important; 
+    box-shadow: none !important; 
+}
+.avatar-opcion {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.avatar-opcion:hover {
+    transform: scale(1.1);
+}
 .logo img{
     width: 280px;
     height: 280px;
@@ -56,35 +202,7 @@ a:link, a:visited, a:active {
 
 }
 
-.burbuja {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: url('../../../img/realistic-style-soap-bubbles-background.png') repeat;
-    opacity: 0.8;
-    animation: moveStars 95s linear infinite;
-    animation: pulse 6s infinite;
-}
 
-@keyframes moveStars {
-    
-    from { background-position: 0 0; }
-    to { background-position: -1000px 0; }
-}
-@keyframes pulse {
-    0% {
-        transform: scale(1);
-        opacity: 1;
-    }
-    50% {
-        transform: scale(1.1);
-        opacity: 0.7;
-    }
-    100% {
-        transform: scale(1);
-        opacity: 1;
-    }
-}
 
 .container{
     position: relative;
