--- a/PROYECTO-MJC memoorize/multijugador/css/style.css
+++ b/PROYECTO-MJC memoorize/multijugador/css/style.css
@@ -30,9 +30,27 @@ body{
 }
 .opcion{
     width: 30%;
-    height: 65px;
+    height: 70px;
     background-image: url(../../img/botonMultijugador.jpg);
-    background-size: cover;
+    background-size: 100% 190%;
+    background-repeat: no-repeat;
     margin: auto;
     border-radius: 15px;
+    box-shadow: 0px 0px 20px #000;
+    transition: 200ms;
+}
+.opcion:hover{
+    color: rgb(2, 61, 11);
+    transform: scale(1.1);
+}
+.opcion p{
+    font-size: 30px;
+    font-weight: 900;
+    text-align: center;
+    position: relative;
+    top: 10%;
+}
+a:link, a:visited, a:active {
+    text-decoration:none;
+    color: rgb(0, 0, 0);
 }
