--- a/PROYECTO-MJC memoorize/juegos/quiz/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/quiz/css/style.css
@@ -67,11 +67,14 @@ body{
     background-color: #eaeaea00; 
     color: white;
 }
-
+.modal-beody{
+    font-size: 21px; 
+    text-align: center; 
+}
 .modal-body {
     font-size: 21px; 
     text-align: center; 
-    right: 100px;
+    right: 80px;
 }
 .modal-title{
     color: black;
