--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -194,15 +194,15 @@ body{
 }
 .animation-container {
     left: 64px;
-    text-align: center; /* Centra la animación */
+    text-align: center;
     bottom: 90px;
     position: relative;
 }
 
 .animal-animation {
-    width: 60px; /* Ajusta el tamaño según lo necesites */
-    height: auto; /* Mantiene la proporción de la imagen */
-    animation: bounce 2s infinite; /* Animación de rebote */
+    width: 60px; 
+    height: auto; 
+    animation: bounce 2s infinite; 
 }
 
 
@@ -219,7 +219,7 @@ body{
 .game-description {
     display: none;
     position: absolute;
-    top: 85%;
+    top: 80%;
     left: 20%;
     width: 200px;
     background-image: url('../../menu/img/botonw.png');
@@ -227,12 +227,13 @@ body{
     background-size: cover; 
     background-repeat: no-repeat;
     background-position: center;
-    color: rgb(0, 0, 0); 
+    color: rgb(255, 255, 255); 
     padding: 10px;
     border-radius: 10px;
     text-align: center;
     z-index: 10;
-    font-size: 1.3em; 
+    font-family: initial;
+    font-size: 1.4em; 
     line-height: 1.6em; 
 }
 
