--- a/PROYECTO-MJC memoorize/multijugador/sala/css/style.css
+++ b/PROYECTO-MJC memoorize/multijugador/sala/css/style.css
@@ -37,3 +37,12 @@ input.input:hover {
     background-color: rgb(0, 231, 96);
     box-shadow: 0px 0px 10px black;
 }
+
+/*estilos sala Jugador*/
+.sala{
+    width: 80%;
+    border: 1px solid bisque;
+    margin: auto;
+    position: relative;
+    top: 50px;
+}
