--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -1,10 +1,8 @@
 body{
-    background-image: url(../../img/view-underwater-sea-life-cartoon-style.jpg);
-    background-attachment: fixed;
+    background-image: url(../img/menu6.jpg); 
     background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-position: center;
-    overflow: hidden;
+    background-size: 221vh 100vh;
+
 }
 
 .modal-content {
@@ -165,7 +163,6 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     padding: 10px;
-    
     margin-left: 34%; 
     border-radius: 50px;
     display: inline-block;
@@ -178,7 +175,6 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../../img/boton.jpg');
     background-size: cover;
     background-position: center;
     z-index: -1000; 
@@ -246,36 +242,6 @@ body{
     transition: transform 0.3s ease-in-out;
 }
 
-.burbuja {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: url('../../img/realistic-style-soap-bubbles-background.png') repeat;
-    opacity: 0.8;
-    animation: moveStars 95s linear infinite;
-    animation: pulse 7s infinite;
-    z-index: -100000;
-}
-
-@keyframes moveStars {
-    
-    from { background-position: 0 0; }
-    to { background-position: -1000px 0; }
-}
-@keyframes pulse {
-    0% {
-        transform: scale(1);
-        opacity: 1;
-    }
-    50% {
-        transform: scale(1.1);
-        opacity: 0.7;
-    }
-    100% {
-        transform: scale(1);
-        opacity: 1;
-    }
-}
 
 @media (width = 320px) and (height:571px){
    /* .scrolle{
