jesus actualizo multijugador

--- a/PROYECTO-MJC memoorize/multijugador/crearSala/css/style.css
+++ b/PROYECTO-MJC memoorize/multijugador/crearSala/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../../../img/fondoSala.gif);
+    background-image: url(../../../img/fondoMultijugador.jpg);
     background-size: 100% 100%;
     background-attachment:fixed;
     background-repeat: no-repeat;
@@ -40,17 +40,9 @@ input.input:hover {
 
 /*estilos sala Jugador*/
 .sala{
-    background-color: rgba(240, 248, 255, 0.329);
-    width: 95%;
-    border-radius: 15px;
+    width: 80%;
+    border: 1px solid bisque;
     margin: auto;
     position: relative;
     top: 50px;
-}
-#players{
-    text-align: center;
-}
-#players img{
-    width: 70px;
-    height: 70px;
 }
