--- a/PROYECTO-MJC memoorize/css/style.css
+++ b/PROYECTO-MJC memoorize/css/style.css
@@ -108,6 +108,7 @@ body {
     width: 100%; 
     z-index: 10; 
     display: flex; 
+    flex-direction: column;
     justify-content: flex-end; 
     align-items: center; 
 }
