--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../../img/view-underwater-sea-life-cartoon-style.jpg); 
+    background-image: url(../../img/fondo4.gif); 
     background-repeat: no-repeat;
     background-size: 221vh 100vh;
 
