--- a/PROYECTO-MJC memoorize/juegos/quiz/niveles/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/quiz/niveles/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../../../../img/fondoWordle.jpg);
+    background-image: url(../../../../img/fondo4.gif);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-attachment: fixed;
