--- a/PROYECTO-MJC memoorize/interfaz/styles.css
+++ b/PROYECTO-MJC memoorize/interfaz/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background: url('img/view-underwater-sea-life-cartoon-style.jpg') no-repeat center center fixed;
+    background: url('../img/fondo4.gif  ') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -114,7 +114,7 @@ body {
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    background: url('img/logo2.png') no-repeat center center;
+    background: url('../img/logo/aqua-Memorize.png') no-repeat center center;
     background-size: contain; 
     border: 20px solid #c0c0c000;
     box-shadow: 0 0 20px rgba(0,0,0,0.5), inset 0 0 50px rgba(0,0,0,0.3);
