--- a/PROYECTO-MJC memoorize/juegos/quiz/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/quiz/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../../img/juegocartas2.gif);
+    background-image: url(../../../img/fondo4.gif);
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
